  key directly if SkipPublicKey is used [OPENDNSSEC-575].
* Signer Engine: log serial of signed zone in STATS line.
* OPENDNSSEC-550: Signer Engine: Put NSEC3 records on empty non-terminals
  derived from unsigned delegations (be compatible with servers that are
  incompatible with RFC 5155 errata 3441).
* OPENDNSSEC-569: Build compatibility with SoftHSMv2.

Bugfixes:
* OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
* OPENDNSSEC-482: libhsm: Improved cleanup for C_FindObjects.
* OPENDNSSEC-515: Signer Engine: Don't replace tabs in RRs with whitespace.
* OPENDNSSEC-538: libhsm: Possible memory corruption in hsm_get_slot_id.
* Signer Engine: Fix a race condition when stopping daemon.


OpenDNSSEC 1.3.16 - 2013-12-04

* SUPPORT-72: Improve logging when failed to increment serial in case 
  of key rollover and serial value "keep" [OPENDNSSEC-441].
* OPENDNSSEC-436: NSEC3PARAM TTL can now be optionally configured in kasp.xml. 
  Default value remains PT0S.
* OPENDNSSEC-458: Add 'ods-enforcerd -p <policy>' option. This prompts the 
  enforcer to run once and only process the specified policy and associated
  zones. 
* OPENDNSSEC-460: ods-ksmutil: Add an option to the 'ods-ksmutil key ds-seen'
  command so the user can choose not to notify the enforcer.
* OPENDNSSEC-472: ods-ksmutil: Add option for 'ods-ksmutil key import' to
  check if there is a matching key in the repository before import.
* OPENDNSSEC-473: ods-ksmutil: Improve 'zone add' - Support default <input>
  and <output> values for DNS adapters.

Bugfixes:
* OPENDNSSEC-451: Signer Engine: Prevent CKA_ID and DNSKEY mixup by using
  a separate HSM context when loading signer configuration.
* OPENDNSSEC-462: Signer Engine: Duration PT0S is not printed correctly.
* ods-ksmutil: Fix typo in policy export with NSEC3 <Iterations>.


OpenDNSSEC 1.3.15 - 2013-09-19

* SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr> so that the user