@@ -7,6 +7,8 @@ OpenDNSSEC 1.3.17rc1
   derived from unsigned delegations (be compatible with servers that are
   incompatible with RFC 5155 errata 3441).
 * OPENDNSSEC-569: Build compatibility with SoftHSMv2.
+* Signer Engine: Examine unsigned zone checks for SOA RRset existence.
+
 
 Bugfixes:
 * OPENDNSSEC-481: libhsm: Fix an off-by-one length check error.
